# demaformer

./: README.md  pyproject.toml  requirements.txt
demaformer/: __init__.py  dataset.py  dema.py  evaluation.py  model.py  trainer.py
scripts/: download_data.py  evaluate.py  train.py
